Sat May 25 01:15:02 UTC 2002  Craig Rodrigues  <crodrigu@bbn.com>

	* bin/nightlybuilds/builds.lst: Move Debian_Minimum bulid to
	  new scoreboard.

Fri May 24 23:52:39 2002  Steve Huston  <shuston@riverace.com>

        * examples/C++NPv2/Configurable_Logging_Server.dsp:
        * examples/C++NPv2/SLD.dsp:
        * examples/C++NPv2/examples.dsw: Added new projects for chapter
          5's configurable logging server.

Fri May 24 20:51:25 2002  Christopher Kohlhoff  <chris@kohlhoff.com>

        * ace/Log_Msg_NT_Event_Log.cpp (open):
          Need to use logger_key, when it is supplied, to register the
          event source with the system.

        * ace/Log_Msg_NT_Event_Log.cpp (log):
          Replace all newlines in the message with the CR-LF character
          sequence so that line breaks are correctly displayed in the
          event viewer.

Fri May 24 20:18:41 2002  Steve Huston  <shuston@riverace.com>

        * examples/C++NPv2/Reactor_Logging_Server.cpp:
        * examples/C++NPv2/Reactor_Logging_Server_T.cpp: Move all the
          method implementations for Reactor_Logging_Server<> into
          Reactor_Logging_Server_T.cpp so they're reuseable in a
          shared library.

        * examples/C++NPv2/Reactor_Logging_Server.h: Add template
          implementation reference plumbing for compilers.

        * examples/C++NPv2/Select_Reactor_Logging_Server.cpp:
        * examples/C++NPv2/TP_Reactor_Logging_Server.cpp:
        * examples/C++NPv2/WFMO_Reactor_Logging_Server.cpp: Remove the
          (duplicate) definitions of Reactor_Logging_Server<>; the
          compiler now generates this using the code in
          Reactor_Logging_Server_T.cpp.

        * examples/C++NPv2/svc.conf:
        * examples/C++NPv2/SLD.cpp:
        * examples/C++NPv2/SLD_export.h:
        * examples/C++NPv2/SLD.mak: Code and Makefile for the dynamic
          logging service in chapter 5.

        * examples/C++NPv2/Makefile: Added SLD.mak.
