@@ -1,3 +1,9 @@
+Sat May 25 11:47:33 2002  Steve Huston  <shuston@riverace.com>
+
+        * examples/C++NPv2/Reactor_Logging_Server_Adapter.cpp (init):
+          Add wide->narrow char conversion to get ACE_TCHAR into
+          a char-based method.
+
 Sat May 25 01:15:02 UTC 2002  Craig Rodrigues  <crodrigu@bbn.com>
 
 	* bin/nightlybuilds/builds.lst: Move Debian_Minimum bulid to
